# llm_benchmarker

./: .gitignore  LICENSE  README.md  pyproject.toml
prompts/: 01_greeting.txt  01_short_json_extraction.txt  10_1K_token_output_python_best_practices.txt  10_best_practices_1000.txt  11_2K_token_output_python_best_practices.txt  11_best_practices_2500.txt  12_4K_token_output_python_best_practices.txt  12_best_practices_5000.txt  13_8K_token_output_python_best_practices.txt  13_best_practices_10000.txt  14_16K_token_output_python_best_practices.txt  15_1K_input_code_refactor.txt  16_4K_input_summary.txt  17_8K_input_needle.txt  18_16K_input_needle.txt  19_2K_output_technical_manual.txt  20_2K_token_input_sailor_story.txt  20_5K_sailor_story.txt  21_10K_sailor_story.txt  21_5K_token_input_sailor_story.txt  22_10K_token_input_sailor_story.txt  22_20K_sailor_story.txt  23_20K_token_input_sailor_story.txt  24_40K_token_input_sailor_story.txt  25_2K_output_structured_list.txt  26_8K_mixed_brief_then_expand.txt  27_4K_input_table_extract.txt  28_8K_code_review.txt
src/llm_benchmarker/: __init__.py  cli.py
