[project]
name = "llm-benchmarker"
version = "0.1.0"
description = "Benchmark llama.cpp models via OpenAI-compatible API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
]

[project.scripts]
benchmark = "llm_benchmarker.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
